text justification add print text

--- a/2 DynamicProgramming/Lab2_102062340_蔡和容.ipynb
+++ b/2 DynamicProgramming/Lab2_102062340_蔡和容.ipynb
@@ -45,7 +45,8 @@
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
@@ -68,7 +69,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 2. Longest Common Subsequence Algorithm"
+    "# 2. Longest Common Subsequence Algorithm\n",
+    "references:http://www.csie.ntnu.edu.tw/~u91029/LongestCommonSubsequence.html"
    ]
   },
   {
@@ -149,51 +151,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 94,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "'''tj_dict(\"imput text\", character number limit) will return the minimum cost of every [start] word'''\n",
-    "# Use a dictionary to store found solutions to subproblems\n",
+    "'''Base on the code mentioned in class, I wrote two new functions. \n",
+    "    One is to print out the text; the other is to calculate the cost.'''\n",
     "\n",
     "def tj_dict(text, width):\n",
     "    word_list = text.split()\n",
     "    d = dict()\n",
-    "    return tj_dict_engine(word_list, width, 0, len(word_list)-1, d)\n",
+    "    tj_dict_engine(word_list, width, 0, len(word_list)-1, d)\n",
+    "    tj_bt(word_list, width, 0, len(word_list)-1, d)\n",
     "\n",
+    "# this fuction will save the costs in a dictionary type and return the minimum\n",
     "def tj_dict_engine(wl, width, start, end, d):\n",
     "    if start > end:\n",
     "        return 0\n",
-    "    # the order of the word [start]-[end] \n",
     "    key = str(start)+'-'+str(end)\n",
-    "    #if the cost is already in dictionary, just return the value\n",
     "    if key in d:\n",
-    "        return d[key]\n",
-    "    \n",
+    "        return d[key][0]\n",
     "    candidates = []\n",
     "    usage = 0\n",
     "    i = start\n",
-    "    # go through the word list until the end\n",
-    "    while (i <= end and\n",
-    "           usage + len(wl[i]) <= width):\n",
+    "    while i <= end and usage + len(wl[i]) <= width:\n",
     "        usage += len(wl[i]) + 1\n",
     "        candidates.append((i, (width-(usage-1))**2))\n",
     "        i += 1\n",
-    "    # calculate the minimum cost of all the candidates    \n",
-    "    min_cost = min([t[1] + tj_dict_engine(wl, width, t[0]+1, end, d) \n",
-    "                for t in candidates])\n",
-    "    # save the minimum cost into dictionary\n",
-    "    d[key] = min_cost\n",
-    "    \n",
-    "    print (\"key{}: {}\".format(key, min_cost))\n",
-    "    return min_cost"
+    "    min_cost, min_word = min([(t[1] + tj_dict_engine(wl, width, t[0]+1, end, d), t[0])\n",
+    "                   for t in candidates])\n",
+    "    d[key] = (min_cost, min_word)\n",
+    "    return min_cost\n",
+    "\n",
+    "# calculate the cost\n",
+    "def cost(line, width):\n",
+    "    return (width - len(line)) ** 2\n",
+    "\n",
+    "# print out the text\n",
+    "def tj_bt(wl, width, start, end, d):\n",
+    "    key = str(start)+'-'+str(end)\n",
+    "    if start > end:\n",
+    "        return\n",
+    "    line = ' '.join(wl[start:d[key][1]+1])\n",
+    "    print(\"cost=\", cost(line, width)) \n",
+    "    print(line)\n",
+    "    tj_bt(wl, width, d[key][1]+1, end, d)\n",
+    "    return"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 95,
    "metadata": {
     "collapsed": false
    },
@@ -202,429 +212,61 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "key411-411: 5476\n",
-      "key410-411: 4761\n",
-      "key409-411: 4096\n",
-      "key408-411: 3844\n",
-      "key407-411: 3249\n",
-      "key406-411: 2916\n",
-      "key405-411: 2601\n",
-      "key404-411: 2401\n",
-      "key403-411: 1936\n",
-      "key402-411: 1521\n",
-      "key401-411: 1024\n",
-      "key400-411: 784\n",
-      "key399-411: 529\n",
-      "key398-411: 441\n",
-      "key397-411: 324\n",
-      "key396-411: 225\n",
-      "key395-411: 81\n",
-      "key394-411: 16\n",
-      "key393-411: 3202\n",
-      "key392-411: 3042\n",
-      "key391-411: 2677\n",
-      "key390-411: 2393\n",
-      "key389-411: 2249\n",
-      "key388-411: 1924\n",
-      "key387-411: 1568\n",
-      "key386-411: 1205\n",
-      "key385-411: 1013\n",
-      "key384-411: 802\n",
-      "key383-411: 724\n",
-      "key382-411: 613\n",
-      "key381-411: 514\n",
-      "key380-411: 325\n",
-      "key379-411: 117\n",
-      "key378-411: 97\n",
-      "key377-411: 41\n",
-      "key376-411: 2297\n",
-      "key375-411: 2193\n",
-      "key374-411: 1934\n",
-      "key373-411: 1589\n",
-      "key372-411: 1454\n",
-      "key371-411: 1202\n",
-      "key370-411: 1048\n",
-      "key369-411: 869\n",
-      "key368-411: 739\n",
-      "key367-411: 614\n",
-      "key366-411: 550\n",
-      "key365-411: 166\n",
-      "key364-411: 90\n",
-      "key363-411: 45\n",
-      "key362-411: 1983\n",
-      "key361-411: 1731\n",
-      "key360-411: 1643\n",
-      "key359-411: 1489\n",
-      "key358-411: 1304\n",
-      "key357-411: 1094\n",
-      "key356-411: 935\n",
-      "key355-411: 860\n",
-      "key354-411: 719\n",
-      "key353-411: 554\n",
-      "key352-411: 391\n",
-      "key351-411: 310\n",
-      "key350-411: 202\n",
-      "key349-411: 115\n",
-      "key348-411: 81\n",
-      "key347-411: 46\n",
-      "key346-411: 1665\n",
-      "key345-411: 1494\n",
-      "key344-411: 1191\n",
-      "key343-411: 1131\n",
-      "key342-411: 1004\n",
-      "key341-411: 840\n",
-      "key340-411: 783\n",
-      "key339-411: 744\n",
-      "key338-411: 680\n",
-      "key337-411: 616\n",
-      "key336-411: 391\n",
-      "key335-411: 302\n",
-      "key334-411: 179\n",
-      "key333-411: 131\n",
-      "key332-411: 82\n",
-      "key331-411: 47\n",
-      "key330-411: 1387\n",
-      "key329-411: 1125\n",
-      "key328-411: 984\n",
-      "key327-411: 904\n",
-      "key326-411: 864\n",
-      "key325-411: 760\n",
-      "key324-411: 616\n",
-      "key323-411: 512\n",
-      "key322-411: 423\n",
-      "key321-411: 327\n",
-      "key320-411: 311\n",
-      "key319-411: 215\n",
-      "key318-411: 167\n",
-      "key317-411: 135\n",
-      "key316-411: 131\n",
-      "key315-411: 86\n",
-      "key314-411: 63\n",
-      "key313-411: 1240\n",
-      "key312-411: 1128\n",
-      "key311-411: 1065\n",
-      "key310-411: 945\n",
-      "key309-411: 681\n",
-      "key308-411: 576\n",
-      "key307-411: 523\n",
-      "key306-411: 448\n",
-      "key305-411: 391\n",
-      "key304-411: 336\n",
-      "key303-411: 240\n",
-      "key302-411: 203\n",
-      "key301-411: 176\n",
-      "key300-411: 122\n",
-      "key299-411: 88\n",
-      "key298-411: 64\n",
-      "key297-411: 1209\n",
-      "key296-411: 1089\n",
-      "key295-411: 1009\n",
-      "key294-411: 906\n",
-      "key293-411: 762\n",
-      "key292-411: 657\n",
-      "key291-411: 604\n",
-      "key290-411: 529\n",
-      "key289-411: 440\n",
-      "key288-411: 407\n",
-      "key287-411: 372\n",
-      "key286-411: 304\n",
-      "key285-411: 252\n",
-      "key284-411: 180\n",
-      "key283-411: 158\n",
-      "key282-411: 138\n",
-      "key281-411: 92\n",
-      "key280-411: 73\n",
-      "key279-411: 1109\n",
-      "key278-411: 1027\n",
-      "key277-411: 931\n",
-      "key276-411: 801\n",
-      "key275-411: 721\n",
-      "key274-411: 640\n",
-      "key273-411: 578\n",
-      "key272-411: 504\n",
-      "key271-411: 432\n",
-      "key270-411: 353\n",
-      "key269-411: 301\n",
-      "key268-411: 277\n",
-      "key267-411: 229\n",
-      "key266-411: 196\n",
-      "key265-411: 154\n",
-      "key264-411: 128\n",
-      "key263-411: 101\n",
-      "key262-411: 77\n",
-      "key261-411: 73\n",
-      "key260-411: 995\n",
-      "key259-411: 865\n",
-      "key258-411: 721\n",
-      "key257-411: 659\n",
-      "key256-411: 604\n",
-      "key255-411: 513\n",
-      "key254-411: 434\n",
-      "key253-411: 378\n",
-      "key252-411: 281\n",
-      "key251-411: 232\n",
-      "key250-411: 200\n",
-      "key249-411: 170\n",
-      "key248-411: 137\n",
-      "key247-411: 102\n",
-      "key246-411: 77\n",
-      "key245-411: 73\n",
-      "key244-411: 914\n",
-      "key243-411: 821\n",
-      "key242-411: 685\n",
-      "key241-411: 620\n",
-      "key240-411: 534\n",
-      "key239-411: 483\n",
-      "key238-411: 414\n",
-      "key237-411: 387\n",
-      "key236-411: 330\n",
-      "key235-411: 268\n",
-      "key234-411: 216\n",
-      "key233-411: 171\n",
-      "key232-411: 127\n",
-      "key231-411: 78\n",
-      "key230-411: 885\n",
-      "key229-411: 829\n",
-      "key228-411: 749\n",
-      "key227-411: 701\n",
-      "key226-411: 669\n",
-      "key225-411: 598\n",
-      "key224-411: 519\n",
-      "key223-411: 478\n",
-      "key222-411: 346\n",
-      "key221-411: 304\n",
-      "key220-411: 277\n",
-      "key219-411: 252\n",
-      "key218-411: 220\n",
-      "key217-411: 172\n",
-      "key216-411: 127\n",
-      "key215-411: 103\n",
-      "key214-411: 82\n",
-      "key213-411: 830\n",
-      "key212-411: 774\n",
-      "key211-411: 750\n",
-      "key210-411: 647\n",
-      "key209-411: 487\n",
-      "key208-411: 340\n",
-      "key207-411: 286\n",
-      "key206-411: 261\n",
-      "key205-411: 220\n",
-      "key204-411: 188\n",
-      "key203-411: 173\n",
-      "key202-411: 143\n",
-      "key201-411: 91\n",
-      "key200-411: 810\n",
-      "key199-411: 775\n",
-      "key198-411: 651\n",
-      "key197-411: 631\n",
-      "key196-411: 536\n",
-      "key195-411: 512\n",
-      "key194-411: 487\n",
-      "key193-411: 421\n",
-      "key192-411: 389\n",
-      "key191-411: 311\n",
-      "key190-411: 277\n",
-      "key189-411: 262\n",
-      "key188-411: 189\n",
-      "key187-411: 143\n",
-      "key186-411: 107\n",
-      "key185-411: 835\n",
-      "key184-411: 800\n",
-      "key183-411: 772\n",
-      "key182-411: 687\n",
-      "key181-411: 600\n",
-      "key180-411: 502\n",
-      "key179-411: 425\n",
-      "key178-411: 360\n",
-      "key177-411: 320\n",
-      "key176-411: 293\n",
-      "key175-411: 289\n",
-      "key174-411: 205\n",
-      "key173-411: 192\n",
-      "key172-411: 159\n",
-      "key171-411: 107\n",
-      "key170-411: 809\n",
-      "key169-411: 751\n",
-      "key168-411: 681\n",
-      "key167-411: 616\n",
-      "key166-411: 600\n",
-      "key165-411: 538\n",
-      "key164-411: 506\n",
-      "key163-411: 429\n",
-      "key162-411: 396\n",
-      "key161-411: 356\n",
-      "key160-411: 294\n",
-      "key159-411: 254\n",
-      "key158-411: 214\n",
-      "key157-411: 205\n",
-      "key156-411: 175\n",
-      "key155-411: 159\n",
-      "key154-411: 132\n",
-      "key153-411: 762\n",
-      "key152-411: 706\n",
-      "key151-411: 602\n",
-      "key150-411: 478\n",
-      "key149-411: 432\n",
-      "key148-411: 372\n",
-      "key147-411: 356\n",
-      "key146-411: 303\n",
-      "key145-411: 263\n",
-      "key144-411: 223\n",
-      "key143-411: 209\n",
-      "key142-411: 191\n",
-      "key141-411: 157\n",
-      "key140-411: 136\n",
-      "key139-411: 787\n",
-      "key138-411: 731\n",
-      "key137-411: 666\n",
-      "key136-411: 618\n",
-      "key135-411: 559\n",
-      "key134-411: 481\n",
-      "key133-411: 457\n",
-      "key132-411: 408\n",
-      "key131-411: 376\n",
-      "key130-411: 352\n",
-      "key129-411: 328\n",
-      "key128-411: 312\n",
-      "key127-411: 279\n",
-      "key126-411: 239\n",
-      "key125-411: 207\n",
-      "key124-411: 195\n",
-      "key123-411: 161\n",
-      "key122-411: 780\n",
-      "key121-411: 735\n",
-      "key120-411: 702\n",
-      "key119-411: 623\n",
-      "key118-411: 575\n",
-      "key117-411: 444\n",
-      "key116-411: 380\n",
-      "key115-411: 328\n",
-      "key114-411: 264\n",
-      "key113-411: 243\n",
-      "key112-411: 216\n",
-      "key111-411: 196\n",
-      "key110-411: 186\n",
-      "key109-411: 829\n",
-      "key108-411: 789\n",
-      "key107-411: 727\n",
-      "key106-411: 687\n",
-      "key105-411: 639\n",
-      "key104-411: 611\n",
-      "key103-411: 576\n",
-      "key102-411: 460\n",
-      "key101-411: 444\n",
-      "key100-411: 381\n",
-      "key99-411: 377\n",
-      "key98-411: 273\n",
-      "key97-411: 232\n",
-      "key96-411: 186\n",
-      "key95-411: 798\n",
-      "key94-411: 712\n",
-      "key93-411: 660\n",
-      "key92-411: 627\n",
-      "key91-411: 592\n",
-      "key90-411: 496\n",
-      "key89-411: 469\n",
-      "key88-411: 448\n",
-      "key87-411: 381\n",
-      "key86-411: 373\n",
-      "key85-411: 322\n",
-      "key84-411: 282\n",
-      "key83-411: 257\n",
-      "key82-411: 232\n",
-      "key81-411: 235\n",
-      "key80-411: 190\n",
-      "key79-411: 823\n",
-      "key78-411: 793\n",
-      "key77-411: 761\n",
-      "key76-411: 685\n",
-      "key75-411: 652\n",
-      "key74-411: 596\n",
-      "key73-411: 521\n",
-      "key72-411: 469\n",
-      "key71-411: 406\n",
-      "key70-411: 382\n",
-      "key69-411: 291\n",
-      "key68-411: 261\n",
-      "key67-411: 248\n",
-      "key66-411: 226\n",
-      "key65-411: 190\n",
-      "key64-411: 810\n",
-      "key63-411: 777\n",
-      "key62-411: 661\n",
-      "key61-411: 585\n",
-      "key60-411: 546\n",
-      "key59-411: 521\n",
-      "key58-411: 470\n",
-      "key57-411: 431\n",
-      "key56-411: 398\n",
-      "key55-411: 327\n",
-      "key54-411: 286\n",
-      "key53-411: 242\n",
-      "key52-411: 230\n",
-      "key51-411: 206\n",
-      "key50-411: 802\n",
-      "key49-411: 686\n",
-      "key48-411: 666\n",
-      "key47-411: 610\n",
-      "key46-411: 582\n",
-      "key45-411: 547\n",
-      "key44-411: 495\n",
-      "key43-411: 467\n",
-      "key42-411: 440\n",
-      "key41-411: 414\n",
-      "key40-411: 352\n",
-      "key39-411: 322\n",
-      "key38-411: 295\n",
-      "key37-411: 278\n",
-      "key36-411: 206\n",
-      "key35-411: 691\n",
-      "key34-411: 618\n",
-      "key33-411: 591\n",
-      "key32-411: 531\n",
-      "key31-411: 492\n",
-      "key30-411: 456\n",
-      "key29-411: 439\n",
-      "key28-411: 347\n",
-      "key27-411: 311\n",
-      "key26-411: 296\n",
-      "key25-411: 282\n",
-      "key24-411: 287\n",
-      "key23-411: 231\n",
-      "key22-411: 727\n",
-      "key21-411: 667\n",
-      "key20-411: 627\n",
-      "key19-411: 600\n",
-      "key18-411: 580\n",
-      "key17-411: 535\n",
-      "key16-411: 472\n",
-      "key15-411: 448\n",
-      "key14-411: 383\n",
-      "key13-411: 347\n",
-      "key12-411: 307\n",
-      "key11-411: 280\n",
-      "key10-411: 247\n",
-      "key9-411: 731\n",
-      "key8-411: 692\n",
-      "key7-411: 604\n",
-      "key6-411: 596\n",
-      "key5-411: 521\n",
-      "key4-411: 476\n",
-      "key3-411: 452\n",
-      "key2-411: 392\n",
-      "key1-411: 356\n",
-      "key0-411: 348\n"
+      "cost= 1\n",
+      "I see Barsad, and Cly, Defarge, The Vengeance [a lieutenant of Madame Defarge],\n",
+      "cost= 36\n",
+      "the Juryman, the Judge, long ranks of the new oppressors who have risen on\n",
+      "cost= 16\n",
+      "the destruction of the old, perishing by this retributive instrument, before\n",
+      "cost= 9\n",
+      "it shall cease out of its present use. I see a beautiful city and a brilliant\n",
+      "cost= 25\n",
+      "people rising from this abyss, and, in their struggles to be truly free, in\n",
+      "cost= 4\n",
+      "their triumphs and defeats, through long years to come, I see the evil of this\n",
+      "cost= 25\n",
+      "time and of the previous time of which this is the natural birth, gradually\n",
+      "cost= 16\n",
+      "making expiation for itself and wearing out. I see the lives for which I lay\n",
+      "cost= 9\n",
+      "down my life, peaceful, useful, prosperous and happy, in that England which I\n",
+      "cost= 16\n",
+      "shall see no more. I see Her with a child upon her bosom, who bears my name.\n",
+      "cost= 16\n",
+      "I see her father, aged and bent, but otherwise restored, and faithful to all\n",
+      "cost= 16\n",
+      "men in his healing office, and at peace. I see the good old man [Mr. Lorry],\n",
+      "cost= 16\n",
+      "so long their friend, in ten years' time enriching them with all he has, and\n",
+      "cost= 0\n",
+      "passing tranquilly to his reward. I see that I hold a sanctuary in their hearts,\n",
+      "cost= 16\n",
+      "and in the hearts of their descendants, generations hence. I see her, an old\n",
+      "cost= 0\n",
+      "woman, weeping for me on the anniversary of this day. I see her and her husband,\n",
+      "cost= 25\n",
+      "their course done, lying side by side in their last earthly bed, and I know\n",
+      "cost= 25\n",
+      "that each was not more honoured and held sacred in the other's soul, than I\n",
+      "cost= 4\n",
+      "was in the souls of both. I see that child who lay upon her bosom and who bore\n",
+      "cost= 9\n",
+      "my name, a man winning his way up in that path of life which once was mine. I\n",
+      "cost= 1\n",
+      "see him winning it so well, that my name is made illustrious there by the light\n",
+      "cost= 16\n",
+      "of his. I see the blots I threw upon it, faded away. I see him, fore-most of\n",
+      "cost= 1\n",
+      "just judges and honoured men, bringing a boy of my name, with a forehead that I\n",
+      "cost= 1\n",
+      "know and golden hair, to this place—then fair to look upon, with not a trace of\n",
+      "cost= 4\n",
+      "this day's disfigurement—and I hear him tell the child my story, with a tender\n",
+      "cost= 25\n",
+      "and a faltering voice. It is a far, far better thing that I do, than I have\n",
+      "cost= 16\n",
+      "ever done; it is a far, far better rest that I go to than I have ever known.\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "348"
-      ]
-     },
-     "execution_count": 64,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -698,7 +340,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 5.\t0-1 Knapsack Problem"
+    "# 5.\t0-1 Knapsack Problem\n",
+    "I learned this DP solution form the course introduction to algorithm"
    ]
   },
   {
